[workspace]
members = [ 
    "hal",
    "qemu",
]
resolver = "2"

[package]
name = "pathos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
harness = false
test = false

[[bin]]
name = "pathos"
harness = false

[dependencies]
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
hal = { path = "hal" }
owo-colors = "4.0.0"
