[workspace]
members = ["allocator", "hal-core", "hal-riscv"]
exclude = ["runner", "usercode"]
resolver = "2"

[package]
name = "pathos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
harness = false
test = false

[[bin]]
name = "pathos"
harness = false

[dependencies]
hal-riscv = { path = "hal-riscv" }
hal-core = { path = "hal-core" }
allocator = { path = "allocator" }
owo-colors = "4.0.0"
spin = "0.9.8"
once_cell = { version = "1.19.0", features = [
    "alloc",
    "race",
], default-features = false }
elf = { version = "0.7.4", default-features = false }
